recursion.lessons.recursion.tree.Tree.scala.error
Tree:13: error: '=' expected but ';' found.
		avance(length); 
                              ^Tree:15: error: ')' expected but identifier found.
			tree(steps:shrink*length, length:Double, angle:Double, shrink:Double)
                                         ^