recursion.lessons.recursion.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	
	
	if (steps==0) {
			return  } 
	
	else {
		var 
		
		
		
		avance(length); 
			droite(angle);
			tree(steps:shrink*length, length:Double, angle:Double, shrink:Double)
			recule (length)
			gauche(2*angle)
			}


}

